--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,3 +1,105 @@
 {
-  "lets get started": "اهلا بك ، البدء"
+  "lets get started": "اهلا بك لنبدء",
+  "skip":"لاحقا",
+  "Continue with facebook":"التسجيل عبر فيسبوك", "or":"أو",
+  "Continue with email":"التسجيل عبر البريد الالكتروني","Order Again":"اطلب مجددا"
+  ,"Browse":"تصفح", 
+  "resturants":"مطعم",
+  "DELIVER TO":"التوصيل إلى",
+  "Get":"احصل على",
+  "Give a Friend ":"اهدي صديقك ",
+  "to try":"ليجرب",
+  "See All":"عرض الكل",
+  "All":"الكل",
+  "Italian":"ايطالي",
+  "Asian":"اسيوي",
+  "International":"عالمي",
+  "Free":"مجاني",
+  "min":"دقيقة",
+  "VARIATION":"الاحجام",
+  "Small - 24 cm":" صغير ٢٤ سم"
+  ,"Medium - 32 cm":"متوسط ٣٢ سم",
+  "Larg -  42 cm":"كبير ٤٢ سم",
+  "Extra Toppings":"مكونات اضافية",
+  "Olives":"زيتون",
+  "Mashrooms":"فطر",
+  "Extra Sause":"صلصة اكسترا", "Tomato Sause": "صلصة طماطم", "Spicy Katchup":"كاتشب حار","Sweet Katchup":"كاتشب حلو","Add Instructions (eg. no onions)":"اضف تعليمات اضافية مثلا (بدون بصل )"
+  ,"Quantity":"الكمية",
+  "Add To Cart":"اضافة الى السلة",
+  "The Pizza Factory":"مصنع البيتزا",
+  "Info":"المعلومات",
+  "Review":"التقييمات",
+  "Address":"العنوان",
+  "Delivery Time":"وقت التسليم",
+  "Sunday":"الاحد",
+  "Monday":"الاثنين",
+  "Thursday":"خميس",
+  "Payment options":"خيارات الدفع",
+  "Pizza":"بيتزا",
+  "Estimated Arrival":"الوقت المقدر",
+  "Order":"طلب",
+  "Delivered":"تم التوصيل",
+  "Post":"منتهية",
+  "Upcoming":"القادمة",
+  "Cnceled":"ملغية",
+  "ُTrack Order":"تتبع الطلب",
+  "Get Help":"مساعدة",
+  "Your Food is on its way":"طلبك في طريقه اليك",
+  "Subtotal":"مجموع فرعي",
+  "Total":"المجموع",
+  "Reorder":"اعادة الطلب",
+  "Profile":"الحساب",
+  "First Name":"الاسم الاول",
+  "Last Name":"الاسم الاخير",
+  "Phone Number":"رقم الهاتف",
+  "Email Address":"البريد الالكتروني",
+  "Password":"كلمة السر",
+  "Name":"الاسم ",
+  "Your Cart - The Pizza Factory":"سلتك -مصنع البيتزا",
+  "Add More Items":"اضافة عنصر اخر الى القائمة",
+  "Add more code":"اضافة كود اخر",
+  "Go to Checkout":"اتمام الطلب",
+  "Your Cart is Empty":"سلتك فارغة",
+  "Map":"الخريطة"
+  , "Filter":"خيرات البحث",
+  "Sort":"الترتيب",
+  "Top Rated":"الاعلى تقييما",
+  "Most Popular":"الاكثر شعبية",
+  "Min.order amount":"عدد الطلبات",
+  "DELIVERY FEE":"ثمن التوصيلة",
+  "MENU PRICES":"اسعار القائمة",
+  "Show All":"عرض الكل",
+  "Less than":"اقل من",
+  "Search for restaurants or dishs":"ابحث عن مطاعم او اطباق",
+  "RESTAURANTS":"مطاعم",
+  "DISHES":"الاطباق",
+  "Search":"ابحث عن"
+,"Top 10":"الاعلي تقييما", "View Cart" :"اعرض السلة","RECENT SEARCHS" :"بحث عن","pizza":"بيتزا","Burgers":"برغر","DELIVERY":"التوصيل","Checkout":"الدفع",
+"Delivery Details":"تفاصيل التقييم","Contact Info":"معلومات الاتصال","PAYMENT":"الدفع","Add payment Method":"اضافة طريقة دفع","Courier Tip":"اكرامية التوصيل"
+,"Payment Method":"طريقة الدفع","Begin Checkout":"ابدا عملية الدفع","Delivery Address":"عنوان التوصيل","  (optional)":"(اختياري)  ","ASAP":"اسرع طريقة ممكنة",
+"Choose Delivery Time:":"Choose Delivery Time:",   "Set Delivery Time":"تحديد وقت التوصيل","Add Card":"اضافة بطاقة","Name on card":"الاسم علي البطاقة",
+"Enter Name here":"ادخل الاسم هنا","Card Number":"رقم البطاقة","Expiry Date":"تاريخ انتهاء الصلاحية","Out of":"من اصل",
+"Reviews":"تقييمات","Saturday":"السبت","Friday":"الجمعة","Cash on delivery":"الدفع كاش عند التوصيل",
+"Add Credit Card":"اضافة بطاقة ائتمانية","Setup Apple Pay":"تهيئة الدفع عن طريق ابل","Enter Building Name":"ادخل رقم البناء", "Apartment/Suite":"غرفة/سويت","eg.Doorbell broken, please yell of knock hard":"مثال، الجرس لا يعمل ،اطرق الباب بقوة",
+"Note to ridder":"ملاحظات للتوصيل","Other":"تحديد","Enter Delivery Address":"ادخل عنوان التوصيل","Enter your contact info":"ادخل معلوماتك"
+,"Unable to access":"لايوجد وصول","Banyas Tartous":"طرطوس بانياس","Done":"تم","Login":"تسجيل الدخول","Favorites":"المفضلة","Delete":"حذف",
+"Popular with Order":"اطباق ذات صلة","Your Cart":"سلتك","Search Restaurants":"تصفح المطاعم","EXTRA TOPPINGS":"مكونات اضافية","Peperoncino":"ببروني","EXTRA SAUSE":"صلصة اضافية","Spicy Ketschup":"صلصة كتشب"
+,"Sweet Ketchup":"صلصة حلوة","QUANTITY":"الكمية","Remove From Cart":"ازالة من السلة","Update Cart":"تحديث السلة","Add":"اضافة"
+,"Minutes":"دقيقة","Minimum":"الحد الادنى","Featured":"المنتجات المتميزة","Items":"عناصر","Offers":"العروض","Pies":"فطائر","Salad":"سلطة","Delivry":"التوصيل","Moazarella,Rocket leavs, Moazarella,Rocket leavs,Moazarella,Rocket leavs, Moazarella,Rocket leavs,Moazarella,Rocket leavs, Moazarella,Rocket leavs":"تفاصيل المنتيج"
+,"Edit Account":"تعديل الحساب","Orders":"الطلبات","Promotions":"الاعلانات والعروض","Invite friends":"ارسال دعوة","Help":"مساعدة","Contact Us":"تواصل معنا",
+"Log out":"تسجيل خروج","Addresses":"العناوين","Payment methods":"الدفع","Pepperoni":"ببروني","Canceled":"ملغاة"
+, "Create Account":"انشاء حساب",
+"Enter email":"ادخل البريد الالكتروني"
+,"Enter email here":"البريد الالكتروني هنا",
+"First name here":"الاسم الاول هنا",
+"Last name":"الاسم الاخير",
+"Last name  here":"الاسم الاخير هنا","By Continueing you accept the ":"بقبولك الاستمرار انت توافق على"
+,"Terms of user":"شروط الاستخدام"," and":" و ",
+"Privact Policy":"سياسة الخصوصية", "Enter Phone Number":"ادخل رقم الهاتف",
+"Please enter your phone number in case we need to contact you during delivery":"الرجاء ادخال رقم هاتفك في حال احتجنا الاتصال بك اثناء التوصيل",
+"Contineu with email":"التسجيل عبر البريد الالكتروني","Create account":"انشاء حساب","Next":"التالي", "Verify phone number":"التحقق من رقم الهاتف",
+"Please enter the code we sent you at ":"الرجاء ادخال الكود الذي ارسل على الرقم","Resend Code":"اعادة ارسال الكود",
+"Verify":"التحقق","Email":"البريد الالكتروني","Show":"اظهار","Current location":"الموقع الحالي","Enter a new address":"ادخل موقع جديد","Delivery":"التوصيل","Pickup":"الاستلام"
+,"Select Payment Method":"اختر طريقة الدفع",
+"MM/YY":"شهر/سنة","FREE Delivery":"توصيل مجاني","FREE":"مجانية","Sundy":"الاحد","Home":"المنزل","Wrok":"العمل"
 }
